--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -50,7 +50,7 @@
                                                             <div class="dotgrid">
                                                                 <div class="wrapper">
                                                                     <!-- 3 lần -->
-                                                                    {{#each category}}
+                                                                    {{#each productList}}
                                                                     <div class="item">
                                                                         <div class="dot-image">
                                                                             <a href="" class="product-permalink"></a>
@@ -328,7 +328,7 @@
                                         <div class="dotgrid">
                                             <div class="wrapper">
                                                 <!--9 lần -->
-                                                {{#each category}}
+                                                {{#each productList}}
                                                 <div class="item">
                                                     <div class="dot-image">
                                                         <a href="" class="product-permalink"></a>
@@ -602,7 +602,7 @@
                                         <ul>
                                             <li>
                                                 <!--3 lần-->
-                                                {{#each category}}
+                                                {{#each productList}}
                                                 <div class="grouping">
                                                     <div class="quantity">
                                                         <div class="control">
