--- a/views/home/home.hbs
+++ b/views/home/home.hbs
@@ -22,8 +22,8 @@
                     <div class="header-center">
                         <nav class="menu">
                             <ul>
-                                <li><a href=""><span>Home</span></a></li>
-                                <li><a href=""><span>Products</span>
+                                <li><a href="/"><span>Home</span></a></li>
+                                <li><a href="/category"><span>Products</span>
                                         <i class="ri-arrow-down-s-line"></i>
                                     </a>
                                     <ul class="sub-mega">
@@ -179,7 +179,7 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li><a href=""><span>Disc</span></a></li>
+                                <li><a href="/category"><span>Disc</span></a></li>
                             </ul>
 
                             <ul>
