--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -359,7 +359,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                {{/category}}
+                                                {{/each}}
                                             </div>
                                         </div>
                                     </div>
