--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -6,6 +6,7 @@
 <style>@import url(/stylesheets/product.css);</style>
 <script src="/javascripts/swiper-bundle.min.js"></script>
 <script type="module" src="/javascripts/script.js"></script>
+<script type="module" src="/javascripts/swiper-bundle.min.js"></script>
 
 <div id="page" class="page-single">
     <header>
