--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -72,11 +72,13 @@
                                                                     <div class="dot-info">
                                                                         <h2 class="dot-title"><a
                                                                                 href="">{{this.name}}</a></h2>
-                                                                        <div class="product-price"></div>
-                                                                        <span class="before">${{this.price}}</span>
+                                                                        <div class="product-price">
+                                                                            <span class="before">${{this.price}}</span>
                                                                         <!--giá ban đầu-->
                                                                         <span class="current">${{this.discount}}</span>
                                                                         <!--giá mới-->
+                                                                        </div>
+                                                                        
                                                                     </div>
                                                                 </div>
                                                                 {{/each}}
