--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -333,7 +333,7 @@
                                                         <img src="{{this.gallery}}" alt="">
                                                     </div>
                                                     <div class="thumbnail hover">
-                                                        <img src="{{this.gallery}}" alt="">
+                                                        <img src="{{this.thumbnail}}" alt="">
                                                     </div>
                                                     <div class="actions">
                                                         <ul>
@@ -350,8 +350,8 @@
                                                 <div class="dot-info">
                                                     <h2 class="dot-title"><a href="">{{this.name}}</a></h2>
                                                     <div class="product-price">
-                                                        <span class="before">{{this.price}}</span>
-                                                        <span class="current">{{this.price}}</span>
+                                                        <span class="before">${{this.price}}</span>
+                                                        <span class="current">${{this.discount}}</span>
                                                     </div>
                                                 </div>
                                             </div>
