--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -185,7 +185,8 @@
                     </div>
                     <div class="content">
                         <div id="sidebar-filter" class="sidebar">
-                            <div class="wrap">
+                            <form action="">
+                                <div class="wrap">
                                 <a href="#0" class="close-trigger" close-button>
                                     <i class="ri-close-line"></i>
                                 </a>
@@ -284,6 +285,7 @@
                                     </div>
                                 </div>
                             </div>
+                            </form>
                         </div>
                         <div class="category-content">
                             <div class="sorter">
