--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -285,6 +285,9 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="button">
+                                        <a href="" class="secondary-btn">Submit</a>
+                                    </div>
                             </form>
                         </div>
                         <div class="category-content">
