--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -161,7 +161,7 @@
                         <ul>
                             <li><a href="">Home</a></li>
                             <li><a href="">Product</a></li>
-                            <li><span>Nike</span></li>
+                            <li><span>Category</span></li>
                         </ul>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
             <div class="container wide">
                 <div class="wrap">
                     <div class="heading">
-                        <h1 class="title">Nike</h1>
+                        <h1 class="title">Category</h1>
                     </div>
                     <div class="content">
                         <div id="sidebar-filter" class="sidebar">
@@ -297,7 +297,8 @@
                                                     <span>$500</span>
                                                 </div>
                                                 <label for="price">Price</label>
-                                                <input type="range" name="price" id="price" value="25" min="0" max="500" step="1">
+                                                <input type="range" name="price" id="price" value="25" min="0" max="500"
+                                                    step="1">
                                             </div>
                                         </div>
                                     </div>
@@ -328,7 +329,7 @@
                                         <div class="widget">
                                             <div class="sumary">
                                                 <label for="color">Colors</label>
-                                                <select name="color" id="color">                                                    
+                                                <select name="color" id="color">
                                                     <option value="white">White</option>
                                                     <option value="black">Black</option>
                                                     <option value="brown">Brown</option>
@@ -353,7 +354,7 @@
                                                     <option value="Dior">Dior</option>
                                                     <option value="LeBron">LeBron</option>
                                                     <option value="Adidas">Adidas</option>
-                                                    
+
                                                     <!-- Add other brand options as needed -->
                                                 </select>
                                             </div>
@@ -371,6 +372,7 @@
                                     <button type="submit" class="secondary-btn">Submit</button>
                                 </div>
                             </form>
+
                         </div>
                         <div class="category-content">
                             <div class="sorter">
