--- a/views/updateProduct/user_create.hbs
+++ b/views/updateProduct/user_create.hbs
@@ -5,9 +5,9 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>User add/delete product</title>
+   <title>User/Admin add/delete product</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-   <link rel="stylesheet" href="./styleshets/user_update.css">
+   <link rel="stylesheet" href="./stylesheets/admin-add.css">
 
 </head>
 
@@ -19,9 +19,9 @@
 
          <form action="" method="post" enctype="multipart/form-data">
             <h3>add a new product</h3>
-            <input type="text" placeholder="enter product name" name="product_name" class="box">
-            <input type="number" placeholder="enter product price" name="product_price" class="box">
-            <input type="number" placeholder="enter product quantity" name="product_quantity" class="box">
+            <input type="text" placeholder="Enter product name" name="product_name" class="box">
+            <input type="number" placeholder="Enter product price" name="product_price" class="box">
+            <input type="number" placeholder="Enter product quantity" name="product_quantity" class="box">
             <input type="file" accept="image/png, image/jpeg, image/jpg" name="product_image" class="box">
             <input type="submit" class="btn" name="add_product" value="add product">
          </form>
@@ -31,19 +31,19 @@
          <table class="product-display-table">
             <thead>
                <tr>
-                  <th>product image</th>
-                  <th>product name</th>
-                  <th>product price</th>
-                  <th>product quantity</th>
-                  <th>action</th>
+                  <th>Product image</th>
+                  <th>Product name</th>
+                  <th>Product price</th>
+                  <th>Quantity</th>
+                  <th>Action</th>
                </tr>
             </thead>
             <tr>
                <td><img src="" height="100" alt=""></td>
                <td>
-                  <a href="./user_edit.hbs" class="btn"> <i class="fas fa-edit"></i>
+                  <a href="./admin-edit.html" class="btn"> <i class="fas fa-edit"></i>
                      edit </a>
-                  <a href="" class="btn"> <i class="fas fa-trash"></i>
+                  <a href="./admin-add.html" class="btn"> <i class="fas fa-trash"></i>
                      delete </a>
                </td>
             </tr>
