--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -354,7 +354,7 @@
                                                     <option value="Dior">Dior</option>
                                                     <option value="LeBron">LeBron</option>
                                                     <option value="Adidas">Adidas</option>
-
+                                                    <option value="Jordan">Jordan</option>
                                                     <!-- Add other brand options as needed -->
                                                 </select>
                                             </div>
