--- a/views/updateProduct/user_create.hbs
+++ b/views/updateProduct/user_create.hbs
@@ -17,7 +17,7 @@
 
       <div class="admin-product-form-container">
 
-         <form action="" method="post" enctype="multipart/form-data">
+         <form action="/product/store" method="post" enctype="multipart/form-data">
             <h3>add a new product</h3>
             <input type="text" placeholder="Enter product name" name="product_name" class="box">
             <input type="number" placeholder="Enter product price" name="product_price" class="box">
