--- a/views/updateProduct/user_create.hbs
+++ b/views/updateProduct/user_create.hbs
@@ -19,9 +19,11 @@
 
          <form action="/product/store" method="post" enctype="multipart/form-data">
             <h3>add a new product</h3>
-            <input type="text" placeholder="Enter product name" name="product_name" class="box">
-            <input type="number" placeholder="Enter product price" name="product_price" class="box">
-            <input type="number" placeholder="Enter product quantity" name="product_quantity" class="box">
+            <input type="text" placeholder="Enter product name" name="name" class="box">
+            <input type="number" placeholder="Enter product price" name="price" class="box">
+            <input type="text" placeholder="Enter URL image" name="gallery" class="box">
+            <input type="text" placeholder="Enter manufacturer" name="manufacturer" class="box">
+            {{!-- <input type="number" placeholder="Enter product quantity" name="product_quantity" class="box"> --}}
             <input type="file" accept="image/png, image/jpeg, image/jpg" name="product_image" class="box">
             <input type="submit" class="btn" name="add_product" value="add product">
          </form>
