--- a/public/stylesheets/category.css
+++ b/public/stylesheets/category.css
@@ -2104,7 +2104,7 @@ form .button {
 
 .cart-menu .product-list>.wrapper {
     max-height: 400px;
-    overflow-x: auto;
+    overflow-x: auto !important;
 }
 
 /* ----------------------------- *
