--- a/views/category/category.hbs
+++ b/views/category/category.hbs
@@ -326,7 +326,11 @@
                                                 <select name="category" id="category">
                                                     <option value="All Shoes">All Shoes</option>
                                                     <option value="Newest Sneaker">Newest Sneaker</option>
-                                                    <!-- Add other category options as needed -->
+                                                    <option value="Jordan">Jordan</option>
+                                                    <option value="Lifestyle">Lifestyle</option>
+                                                    <option value="Running">Running</option>
+                                                    <option value="Gym">Gym</option>
+                                                    <option value="Basketball">Basketballr</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -339,7 +343,6 @@
                                                     <option value="LeBron">LeBron</option>
                                                     <option value="Adidas">Adidas</option>
                                                     <option value="Jordan">Jordan</option>
-                                                    <!-- Add other brand options as needed -->
                                                 </select>
                                             </div>
                                         </div>
