--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -439,7 +439,7 @@
                                         </div>
                                     </div>
                                     <div class="body-review">
-                                        {{#each}}
+                                        {{#each review}}
                                         <div class="profile">
                                             <div class="thumb-name">
                                                 <div class="image">
