--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1,9 +1,12 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <style type="stylesheets">@import url(https://fonts.cdnfonts.com/css/prata-2);</style>
-<style type="stylesheets">@import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
+<style type="stylesheets">
+    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext&display=swap);</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css);</style>
 <style type="stylesheets">@import url(https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css);</style>
-<style>@import url(/stylesheets/product.css);</style>
+<style>
+    @import url(/stylesheets/product.css);
+</style>
 <script src="/javascripts/swiper-bundle.min.js"></script>
 <script type="module" src="/javascripts/script.js"></script>
 <script type="module" src="/javascripts/swiper-bundle.min.js"></script>
@@ -68,10 +71,13 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <h2 class="dot-title"><a
+                                                                                    href="">{{product.name}}</a></h2>
                                                                             <div class="product-price">
-                                                                                <span class="before">${{product.price}}</span>
-                                                                                <span class="current">${{product.discount}}</span>
+                                                                                <span
+                                                                                    class="before">${{product.price}}</span>
+                                                                                <span
+                                                                                    class="current">${{product.discount}}</span>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -101,10 +107,13 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                            <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <h2 class="dot-title"><a
+                                                                                    href="">{{product.name}}</a></h2>
                                                                             <div class="product-price">
-                                                                                <span class="before">${{product.price}}</span>
-                                                                                <span class="current">${{product.discount}}</span>
+                                                                                <span
+                                                                                    class="before">${{product.price}}</span>
+                                                                                <span
+                                                                                    class="current">${{product.discount}}</span>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -134,10 +143,13 @@
                                                                             </div>
                                                                         </div>
                                                                         <div class="dot-info">
-                                                                           <h2 class="dot-title"><a href="">{{product.name}}</a></h2>
+                                                                            <h2 class="dot-title"><a
+                                                                                    href="">{{product.name}}</a></h2>
                                                                             <div class="product-price">
-                                                                                <span class="before">${{product.price}}</span>
-                                                                                <span class="current">${{product.discount}}</span>
+                                                                                <span
+                                                                                    class="before">${{product.price}}</span>
+                                                                                <span
+                                                                                    class="current">${{product.discount}}</span>
                                                                             </div>
                                                                         </div>
                                                                     </div>
@@ -448,7 +460,8 @@
                                                 <div class="grouping">
                                                     <div class="name">{{review.name}}</div>
                                                     <div class="rating">
-                                                        <i class="ri-star-fill">{{review.rating}}</i> <!--có 5 ngôi sao để trong 1 cái hay 5 cái-->
+                                                        <i class="ri-star-fill">{{review.rating}}</i>
+                                                        <!--có 5 ngôi sao để trong 1 cái hay 5 cái-->
                                                         <i class="ri-star-fill"></i>
                                                         <i class="ri-star-fill"></i>
                                                         <i class="ri-star-fill"></i>
@@ -1287,3 +1300,7 @@
         </div>
     </div>
 </div>
+
+
+
+
