--- a/views/product/product.hbs
+++ b/views/product/product.hbs
@@ -1302,4 +1302,10 @@
 </div>
 
 
+{{#section 'scripts'}}
+    <script>
+        $.getJSON('/product/{{productDetail._id}}/reviews');
+    </script>
+{{/section}}
+
 
