--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -26,6 +26,12 @@
   href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+
+
+
+{{{_sections.scripts}}}
+  <!-- END PAGE LEVEL JAVASCRIPTS -->
 </body>
 
 </html>
